@@ -4,27 +4,21 @@
 	<parent>
 		<groupId>org.prosolo</groupId>
 		<artifactId>prosolo-multimodule</artifactId>
-		<version>1.2.5</version>
+		<version>1.3.0</version>
 	</parent>
 	<artifactId>prosolo-analytics</artifactId>
 	<name>ProSolo Analytics</name>
 	<packaging>war</packaging>
-	<version>1.2.5</version>
+	<version>1.3.0</version>
 	<properties>
-		<jersey.version>2.8</jersey.version>
 		<resteasy.version>3.0.9.Final</resteasy.version>
-		<jetty.version>9.3.7.v20160115</jetty.version>
-		<jersey.version>1.19.1</jersey.version>
-		<jersey2.version>2.23</jersey2.version>
-		<jaxrs.version>2.0.1</jaxrs.version>
-		<!--jetty.version>8.1.16.v20140903</jetty.version-->
-		<spark.version>2.2.0</spark.version>
+		<jetty.version>9.4.14.v20181114</jetty.version>
+		<jersey2.version>2.27</jersey2.version>
+		<jaxrs.version>2.1.1</jaxrs.version>
 		<scala.version>2.11.12</scala.version>
 		<quartz.version>2.2.1</quartz.version>
-		<twitter4j.version>4.0.4</twitter4j.version>
+		<twitter4j.version>4.0.7</twitter4j.version>
 		<mahout.version>0.9</mahout.version>
-	    <spark-cassandra-connector.version>2.0.0-M3</spark-cassandra-connector.version>
-		<cassandra-java-driver.version>3.0.0</cassandra-java-driver.version>
 	</properties>
 	<repositories>
 		<repository>
@@ -73,29 +67,24 @@
 		<dependency>
 			<groupId>javax.mail</groupId>
 			<artifactId>mail</artifactId>
-			<version>1.4.5</version>
+			<version>1.5.0-b01</version>
 		</dependency>
 		<dependency>
 			<groupId>org.prosolo</groupId>
 			<artifactId>bigdata.common</artifactId>
-			<version>1.2.5</version>
+			<version>1.3.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.prosolo</groupId>
 			<artifactId>spark-jobs</artifactId>
-			<version>1.2.5</version>
+			<version>1.3.0</version>
 		</dependency>
 
 		<!-- RabbitMQ dependencies -->
 		<dependency>
 			<groupId>com.rabbitmq</groupId>
 			<artifactId>amqp-client</artifactId>
-			<version>3.5.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.logging.log4j.adapters</groupId>
-			<artifactId>log4j-to-slf4j</artifactId>
-			<version>2.0-beta4</version>
+			<version>5.5.0</version>
 		</dependency>
 
 		<!-- JSON -->
@@ -116,7 +105,7 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.3.2</version>
+			<version>3.8.1</version>
 		</dependency>
 
 		<dependency>
@@ -145,29 +134,12 @@
 			<artifactId>jersey-bean-validation</artifactId>
 			<version>${jersey2.version}</version>
 		</dependency>
-
-
-		<!-- Spark dependencies -->
 		<dependency>
-			<groupId>org.apache.spark</groupId>
-			<artifactId>spark-core_2.11</artifactId>
-			<version>${spark.version}</version>
-			<exclusions>
-				<exclusion>
-					<artifactId>jersey-server</artifactId>
-					<groupId>com.sun.jersey</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>jersey-core</artifactId>
-					<groupId>com.sun.jersey</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>xbean-asm5-shaded</artifactId>
-					<groupId>org.apache.xbean</groupId>
-				</exclusion>
-
-			</exclusions>
+			<groupId>org.glassfish.jersey.inject</groupId>
+			<artifactId>jersey-hk2</artifactId>
+			<version>${jersey2.version}</version>
 		</dependency>
+
 	   <!-- Twitter4j dependencies -->
 		<dependency>
 			<groupId>org.twitter4j</groupId>
@@ -184,13 +156,13 @@
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.5.2</version>
+			<version>4.5.6</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpcore -->
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpcore</artifactId>
-			<version>4.4.5</version>
+			<version>4.4.10</version>
 		</dependency>
 
 		<dependency>
@@ -199,12 +171,6 @@
 			<version>1.1.1.6</version>
 		</dependency>
 
-		<!--Scala dependencies -->
-		<dependency>
-			<groupId>org.scala-lang</groupId>
-			<artifactId>scala-library</artifactId>
-			<version>${scala.version}</version>
-		</dependency>
 		<dependency>
 			<groupId>org.scala-lang</groupId>
 			<artifactId>scala-compiler</artifactId>
@@ -228,6 +194,12 @@
 			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz</artifactId>
 			<version>${quartz.version}</version>
+			<exclusions>
+			<exclusion>
+				<artifactId>c3p0</artifactId>
+				<groupId>c3p0</groupId>
+			</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.quartz-scheduler</groupId>
@@ -323,21 +295,6 @@
   			<scope>test</scope>
 		</dependency>
 
-	    <!-- added spark cassandra connector -->
-	    <dependency>
-			<groupId>com.datastax.spark</groupId>
-			<artifactId>spark-cassandra-connector_2.11</artifactId>
-			<version>${spark-cassandra-connector.version}</version>
-			<exclusions>
-			</exclusions>
-		</dependency>
-
-		<dependency>
-			<groupId>org.elasticsearch</groupId>
-			<artifactId>elasticsearch-spark-20_2.11</artifactId>
-			<version>5.3.0</version>
-		</dependency>
-
 		<!-- Used for hashing database ids in urls -->
 		<dependency>
 			<groupId>org.hashids</groupId>
@@ -380,12 +337,22 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.19.1</version>
+					<version>3.0.0-M1</version>
+					<configuration>
+						<argLine>
+							--illegal-access=permit
+						</argLine>
+					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>net.alchim31.maven</groupId>
 					<artifactId>scala-maven-plugin</artifactId>
 					<version>[3.2.2,)</version>
+					<configuration>
+						<args>
+							<arg>-nobootcp</arg>
+						</args>
+					</configuration>
 				</plugin>
 					<!--This plugin's configuration is used to store Eclipse m2e settings
 					only. It has no influence on the Maven build itself. -->
@@ -422,8 +389,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<release>11</release>
 				</configuration>
 				<executions>
 					<execution>
@@ -437,7 +403,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.6</version>
+				<version>3.1.0</version>
 				<configuration>
 					<skip>false</skip>
 				</configuration>
@@ -479,10 +445,10 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.18</version>
+				<version>3.0.0-M1</version>
 				<configuration>
 					<argLine>-Xmx4096m -XX:+HeapDumpOnOutOfMemoryError
-						-XX:HeapDumpPath=/home/zoran/Desktop/dumps</argLine>
+						-XX:HeapDumpPath=/home/zoran/Desktop/dumps --illegal-access=permit</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
